[IE11] fix overflow issue on Alumni Spotlight section on home page

--- a/src/assets/scss/content/homepage/sections/section.alumni.scss
+++ b/src/assets/scss/content/homepage/sections/section.alumni.scss
@@ -219,6 +219,10 @@
 
                 }
 
+                & > * {
+                    max-width: 100%;
+                }
+
             }
 
             // text
